--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17173531">California debuts ‘digital’ license plates</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://amp.sacbee.com/news/local/transportation/back-seat-driver/article211828814.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=arunc">arunc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:14:02 &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
+                                    11.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171538">Firefox will protect you from websites that mine cryptocurrency on your computer</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -215,26 +235,6 @@
                                     2018-05-28 14:22:26 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     10.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    9.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 23:30:03.487468</strong>
+            <strong>Last update at 2018-05-28 23:40:03.954145</strong>
         </div>
     </div>
 </div>
