--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171783">The Mexican art of double entendre</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173791">Geohot on twitch livecoding SLAM (simultaneous localization and mapping)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/travel/story/20180527-the-mexican-art-of-double-entendre">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=MiriamWeiner">MiriamWeiner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 11:07:08 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
-                                    25.0 points
+                                    <a class="node" href="https://www.twitch.tv/tomcr00s3">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kiproping">kiproping</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:58:36 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    23.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,26 +254,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=shortformblog">shortformblog</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 22:48:24 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
-                                    22.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173791">Geohot on twitch livecoding SLAM (simultaneous localization and mapping)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.twitch.tv/tomcr00s3">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kiproping">kiproping</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 17:58:36 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
                                     22.0 points
                                 </span>
                             </td>
@@ -446,6 +426,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    16.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -466,15 +466,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174696">Evidence of regulatory capture of patent examiners</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172855">Workers of the world unite on distributed digital platforms</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://papers.nber.org/papers/W24638">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:38:01 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    15.0 points
+                                    <a class="node" href="https://aeon.co/essays/workers-of-the-world-unite-on-distributed-digital-platforms">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 15:16:31 &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
+                                    14.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172855">Workers of the world unite on distributed digital platforms</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175091">It Takes $4.2M Net Worth to Be Considered Wealthy in Silicon Valley [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://aeon.co/essays/workers-of-the-world-unite-on-distributed-digital-platforms">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 15:16:31 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
-                                    14.0 points
+                                    <a class="node" href="https://aboutschwab.com/images/uploads/inline/Charles-Schwab-Modern-Wealth-Index-Bay-Area-Press-Release.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=11thEarlOfMar">11thEarlOfMar</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:52:25 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    13.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 23:50:03.058734</strong>
+            <strong>Last update at 2018-05-29 00:00:03.308489</strong>
         </div>
     </div>
 </div>
