--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -506,13 +506,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175549">Indie Hackers B2B Growth Strategies Reverse Engineered</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
+                                    <a class="node" href="https://medium.com/@fairpixelsco/b2b-growth-strategies-by-indiehackers-8ab87ed66d0d?cm">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=fairpx">fairpx</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 00:15:41 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174881">Using PGP keyservers for decentralised file storage</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175359">Why did we decide to write Docker in Go</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/yakamok/keyserver-fs">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=yakamok">yakamok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:14:19 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.slideshare.net/jpetazzo/docker-and-go-why-did-we-decide-to-write-docker-in-go">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=astdb">astdb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:08:45 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
                             </td>
@@ -546,13 +546,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174594">5 of the Best Board Games for Software Engineers</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://revelry.co/best-board-games-software-engineers/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mrhilltop">mrhilltop</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:18:56 &nbsp;•&nbsp;
+                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 00:30:03.300974</strong>
+            <strong>Last update at 2018-05-29 00:40:03.579461</strong>
         </div>
     </div>
 </div>
