--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173987">GitHub and ZenHub give us a glimpse into the collaborative future of work</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,26 +526,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175549">Indie Hackers B2B Growth Strategies Reverse Engineered</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://medium.com/@fairpixelsco/b2b-growth-strategies-by-indiehackers-8ab87ed66d0d?cm">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fairpx">fairpx</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 00:15:41 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17175359">Why did we decide to write Docker in Go</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174881">Using PGP keyservers for decentralised file storage</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/yakamok/keyserver-fs">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=yakamok">yakamok</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:14:19 &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 00:50:03.566906</strong>
+            <strong>Last update at 2018-05-29 01:00:02.986993</strong>
         </div>
     </div>
 </div>
