--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170114">Browsing porn in incognito mode isn't nearly as private as you think</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
+                                    <a class="node" href="https://www.theguardian.com/commentisfree/2018/may/27/incognito-mode-what-does-it-mean-history-google-chrome-privacy-settings">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:25:07 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
+                                    7.0 points
                                 </span>
                             </td>
                         </tr>
@@ -346,6 +346,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175359">Why did we decide to write Docker in Go</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.slideshare.net/jpetazzo/docker-and-go-why-did-we-decide-to-write-docker-in-go">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=astdb">astdb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:08:45 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173937">Messaging Layer Security Architecture</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,34 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170053">TXR: A Language for Data Munging</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174881">Using PGP keyservers for decentralised file storage</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://nongnu.org/txr/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomcam">tomcam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 01:02:36 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175359">Why did we decide to write Docker in Go</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.slideshare.net/jpetazzo/docker-and-go-why-did-we-decide-to-write-docker-in-go">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=astdb">astdb</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:08:45 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/yakamok/keyserver-fs">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=yakamok">yakamok</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:14:19 &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174881">Using PGP keyservers for decentralised file storage</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174594">5 of the Best Board Games for Software Engineers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/yakamok/keyserver-fs">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=yakamok">yakamok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:14:19 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://revelry.co/best-board-games-software-engineers/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mrhilltop">mrhilltop</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:18:56 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 01:00:02.986993</strong>
+            <strong>Last update at 2018-05-29 01:10:03.261179</strong>
         </div>
     </div>
 </div>
