--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172092">Robust Clojure: The best way to handle nil</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166132">Tomorrow's cities: Google's Toronto city built 'from the internet up'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bsima.me/clog/robust-clojure-nil.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:38:31 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
-                                    115.0 points
+                                    <a class="node" href="http://www.bbc.com/news/technology-41414872">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=adzicg">adzicg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 09:03:09 &nbsp;•&nbsp;
+                                    47 comments &nbsp;•&nbsp;
+                                    116.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:47 &nbsp;•&nbsp;
-                                    57 comments &nbsp;•&nbsp;
+                                    59 comments &nbsp;•&nbsp;
                                     106.0 points
                                 </span>
                             </td>
@@ -413,7 +413,7 @@
                                     <a class="node" href="http://www.alphr.com/technology/1008859/makita-coffee-maker-drill-batteries">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 06:59:35 &nbsp;•&nbsp;
-                                    86 comments &nbsp;•&nbsp;
+                                    87 comments &nbsp;•&nbsp;
                                     105.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 01:00:02.986993</strong>
+            <strong>Last update at 2018-05-29 01:10:03.261179</strong>
         </div>
     </div>
 </div>
